# platform.core.security.key-manager

./: CMakeLists.txt  HOW.TO.COMPILE.ON.UBUNTU.txt
base/: CMakeLists.txt  key-base.cpp  key-base.h  key-base.pc.in
data/: CMakeLists.txt
data/gumd/: 10_key-manager.post  10_key-manager.post.in  CMakeLists.txt
data/scripts/: 230.key-manager-change-data-dir.patch.sh.in  230.key-manager-migrate-dkek.patch.sh  231.key-manager-change-user.patch.sh  231.key-manager-migrate-dkek.patch.sh.in  232.key-manager-change-user.patch.sh.in  233.key-manager-move-ss-migratable-data.patch.sh.in  CMakeLists.txt  create_schema.sql  migrate_3.sql
doc/: CMakeLists.txt  example.xml  initial_values.xsd  key-manager-client_doc.h  key-manager_doc.h  sw_key.xsd
packaging/: key-manager-tests.manifest  key-manager-tests.manifest.in  key-manager.manifest  key-manager.manifest.in  key-manager.spec
src/: CMakeLists.txt
src/include/ckm/: ckm-certificate.h  ckm-control.h  ckm-key.h  ckm-manager-async.h  ckm-manager.h  ckm-password.h  ckm-pkcs12.h  ckm-raw-buffer.h  ckm-type.h
src/include/ckmc/: ckmc-control.h  ckmc-error.h  ckmc-manager.h  ckmc-type.h
src/listener/: CMakeLists.txt  listener-daemon.cpp
src/manager/: CMakeLists.txt
src/manager/client/: client-common.cpp  client-common.h  client-control.cpp  client-error.cpp  client-manager-impl.cpp  client-manager-impl.h  client-manager.cpp
src/manager/client-async/: async-request.cpp  async-request.h  client-manager-async-impl.cpp  client-manager-async-impl.h  client-manager-async.cpp  connection-thread.cpp  connection-thread.h  descriptor-set.cpp  descriptor-set.h  encryption-receiver.cpp  encryption-receiver.h  ocsp-receiver.cpp  ocsp-receiver.h  receiver.h  service.cpp  service.h  storage-receiver.cpp  storage-receiver.h
src/manager/client-capi/: ckmc-control.cpp  ckmc-error.cpp  ckmc-manager.cpp  ckmc-params.cpp  ckmc-params.h  ckmc-type-converter.cpp  ckmc-type-converter.h  ckmc-type.cpp
src/manager/common/: algo-param.cpp  base64.cpp  base64.h  certificate-impl.cpp  certificate-impl.h  connection-info.h  crypto-init.cpp  data-type.cpp  data-type.h  exception.cpp  exception.h  key-aes-impl.cpp  key-aes-impl.h  key-impl.cpp  key-impl.h  log-setup.cpp  message-buffer.cpp  message-buffer.h  noncopyable.h  openssl_utils.h  (+5 more)
src/pam_plugin/: pam-key-manager-plugin.cpp
src/plugin/: CMakeLists.txt  pam-ckm-notify.cpp
systemd/: central-key-manager-listener.service  central-key-manager.service.in
tests/: CMakeLists.txt  DBFixture.cpp  DBFixture.h  XML_2_structure.xml  XML_3_encrypted.xml  XML_4_device_key.xml  colour_log_formatter.cpp  colour_log_formatter.h  main.cpp  test-key-provider.cpp  test_base64.cpp  test_comm-manager.cpp  test_common.cpp  test_common.h  test_data-type.cpp  test_db_crypto.cpp  test_descriptor-set.cpp  test_encryption-scheme.cpp  test_for-each-file.cpp  test_safe-buffer.cpp  test_serialization.cpp  test_sql.cpp  test_watched-thread.h  test_xml-parser.cpp
tests/encryption-scheme/: CMakeLists.txt  generate-db.cpp  scheme-test.cpp  scheme-test.h  smack-access.cpp  smack-access.h
tests/resources/: XML_3_encrypted.xsd
tests/secure-storage-old-data/: README  push-data.sh
tools/: CMakeLists.txt  ckm_so_loader.cpp  ckm_tool.cpp
tools/ckm_db_tool/: CMakeLists.txt  ckm-logic-ext.cpp  ckm-logic-ext.h  ckm_db_tool.cpp  db-crypto-ext.cpp  db-crypto-ext.h
(+189 files in other folders)
