PKG_CHECK_MODULES(BASE_DEP
  REQUIRED
  cynara-base)

SET(TARGET_BASE "key-base")

SET(BASE_SRC
  ${PROJECT_SOURCE_DIR}/base/key-base.cpp
  )

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/base
  ${BASE_DEP_INCLUDE_DIRS}
  )

ADD_LIBRARY(${TARGET_BASE} SHARED ${BASE_SRC})

SET_TARGET_PROPERTIES(
  ${TARGET_BASE}
  PROPERTIES
      COMPILE_FLAGS "-fPIC"
      SOVERSION 0.0.1
      VERSION 0.1.0
  )

TARGET_LINK_LIBRARIES(${TARGET_BASE} ${BASE_DEP_LIBRARIES})

INSTALL(TARGETS ${TARGET_BASE} DESTINATION /usr/lib)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/base/key-base.h DESTINATION /usr/include )

CONFIGURE_FILE(key-base.pc.in key-base.pc @ONLY)

INSTALL(FILES ${PROJECT_SOURCE_DIR}/base/key-base.pc DESTINATION /usr/lib/pkgconfig )

