SET(PAM_CKM_NOTIFY_PLUGIN_SOURCES
    ${PROJECT_SOURCE_DIR}/src/plugin/pam-ckm-notify.cpp
    )

INCLUDE_DIRECTORIES(SYSTEM
    ${PAM_CKM_NOTIFY_PLUGIN_DEP_INCLUDE_DIRS}
    )

ADD_LIBRARY(${TARGET_PAM_CKM_NOTIFY_PLUGIN} SHARED ${PAM_CKM_NOTIFY_PLUGIN_SOURCES})

SET_TARGET_PROPERTIES(
    ${TARGET_PAM_CKM_NOTIFY_PLUGIN}
    PROPERTIES
        PREFIX ""
        COMPILE_FLAGS "-fvisibility=hidden"
    )

TARGET_LINK_LIBRARIES(${TARGET_PAM_CKM_NOTIFY_PLUGIN}
    ${TARGET_KEY_MANAGER_CONTROL_CLIENT}
    ${TARGET_KEY_MANAGER_COMMON}
    )

INSTALL(TARGETS ${TARGET_PAM_CKM_NOTIFY_PLUGIN} LIBRARY DESTINATION ${LIB_INSTALL_DIR}/security NAMELINK_SKIP)
